Revert "fix(select): fix page scroll the element Misalignment (#91)"
This reverts commit 41e8e003c392c0f08c7a96e3ac4f38459b4f7454.

--- a/packages/select/index.less
+++ b/packages/select/index.less
@@ -31,6 +31,9 @@
       var(--fay-gap-quarter) var(--fay-gap-half);
     box-sizing: border-box;
   }
+}
+
+.fect-select {
   .value {
     display: inline-flex;
     flex: 1;
@@ -44,7 +47,7 @@
 
     width: calc(100% - 18px);
   }
-  &__placeholder {
+  .fect-select__placeholder {
     color: var(--accents-3);
     overflow: hidden;
     text-overflow: ellipsis;
@@ -53,7 +56,10 @@
     font-size: var(--select-fontSize);
     line-height: var(--select-height);
   }
-  &__icon-context {
+}
+
+.fect-select {
+  .fect-select__icon-context {
     position: absolute;
     right: var(--fay-gap-quarter);
     font-size: var(--select-fontSize);
@@ -69,13 +75,16 @@
       transform: translateY(-50%) rotate(180deg);
     }
   }
+}
+
+.fect-select {
   .fect-multiple__container {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
     margin-right: var(--fay-gap-half);
   }
-  &__item {
+  .fect-select__item {
     display: inline-flex;
     height: calc(var(--select-fontSize) * 2);
     justify-items: center;
@@ -88,7 +97,7 @@
     background-color: var(--accents-2);
     color: var(--accents-6);
   }
-  &__clearIcon {
+  .fect-select__clearIcon {
     padding: 0;
     padding-left: var(--fay-gap-quarter);
     margin: 0;
@@ -109,14 +118,15 @@
       height: 18px;
     }
   }
-  &__dropdown {
-    position: absolute;
-    z-index: 200;
-    width: 100%;
-    background-color: var(--primary-background);
-    border-radius: var(--fay-radius);
-    overflow-y: auto;
-    box-shadow: var(--fay-shadowLarge);
-    padding: var(--fay-gap-quarter) 0;
-  }
+}
+
+.fect-select__dropdown {
+  position: absolute;
+  z-index: 1200;
+  width: 100%;
+  background-color: var(--primary-background);
+  border-radius: var(--fay-radius);
+  overflow-y: auto;
+  box-shadow: var(--fay-shadowLarge);
+  padding: var(--fay-gap-quarter) 0;
 }
